handle webhook message

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -823,7 +823,6 @@
                                     <tr>
                                         <th>Name</th>
                                         <th>Category</th>
-                                        <th>Base Price</th>
                                         <th>Dimensions</th>
                                         <th>Status</th>
                                         <th>Actions</th>
@@ -851,9 +850,6 @@
                                     <tr>
                                         <th>Name</th>
                                         <th>Category</th>
-                                        <th>Price/Unit</th>
-                                        <th>Unit</th>
-                                        <th>Thickness</th>
                                         <th>Status</th>
                                         <th>Actions</th>
                                     </tr>
@@ -881,6 +877,7 @@
                                     <tr>
                                         <th>Name</th>
                                         <th>Category</th>
+                                        <th>Attribute</th>
                                         <th>Status</th>
                                         <th>Actions</th>
                                     </tr>
